--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -28,6 +28,7 @@
       }
     }
     .el-form-item {
+      width: 50%;
       margin-bottom: 0;
     }
   }
@@ -69,6 +70,23 @@ a {
   padding: 5px 10px;
   text-align: left;
   border-radius: 4px;
+}
+*{
+  &::-webkit-scrollbar-track-piece {
+    background: #fafafa;
+  }
+
+  &::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: rgba(144, 147, 153, 0.3);
+    border-radius: 20px;
+    &:hover {
+      background: rgba(144, 147, 153, 0.5);
+    }
+  }
 }
 .system-scrollbar {
   &::-webkit-scrollbar {
