--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -110,3 +110,23 @@ a {
     }
   }
 }
+.el-form-item__content{
+  display: flex;
+  align-items: center;
+  .el-input + .el-radio{
+    margin-left: 10px;
+  }
+  .el-select + .el-select{
+    margin-left: 10px;
+  }
+  .el-input + .el-select{
+    margin-left: 10px;
+    width: 100%;
+  }
+  .el-input + .el-input{
+    margin-left: 10px;
+  }
+  .el-switch{
+    margin-right: 10px;
+  }
+}
