--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -16,15 +16,21 @@
     &-handle {
       display: flex;
       justify-content: flex-start;
+      .el-input{
+        margin-right: 10px;
+      }
       .export-excel-btn {
-        margin-left: 15px;
+        // margin-left: 15px;
       }
     }
     &-search {
       display: flex;
       justify-content: flex-end;
+      .el-input{
+        margin-right: 10px;
+      }
       .search-btn {
-        margin-left: 15px;
+        // margin-left: 15px;
       }
     }
     .el-form-item {
