--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -1,6 +1,8 @@
 @import './transition.scss';
 @import '@/theme/index.scss';
 @import '@/icon/iconfont.css';
+@import './elementPlus.scss';
+
 .layout-container {
   background-color: var(--system-container-main-background);
   width: calc(100% - 30px);
@@ -116,23 +118,28 @@ a {
     }
   }
 }
-.el-form-item__content{
-  display: flex;
-  align-items: center;
-  .el-input + .el-radio{
-    margin-left: 10px;
-  }
-  .el-select + .el-select{
-    margin-left: 10px;
-  }
-  .el-input + .el-select{
-    margin-left: 10px;
-    width: 100%;
-  }
-  .el-input + .el-input{
-    margin-left: 10px;
-  }
-  .el-switch{
-    margin-right: 10px;
+.form-item-jv{
+  .el-form-item__content{
+    display: flex;
+    .el-textarea{
+      // width: 50%;
+      flex: 1;
+      .el-textarea__inner{
+        height: 300px;
+      }
+    }
+    .jv-container{
+      margin-right: 10px;
+      flex: 1;
+      // width: 50%;
+      height: 300px;
+      overflow:hidden;
+      .jv-code{
+        padding:10px;
+      }
+      .jv-code.boxed{
+        overflow:auto;
+      }
+    }
   }
 }
