--- a/src/assets/style/elementPlus.scss
+++ b/src/assets/style/elementPlus.scss
@@ -4,12 +4,18 @@
     .el-input + .el-radio{
       margin-left: 10px;
     }
+    .el-input + .el-checkbox{
+      margin-left: 10px;
+    }
     .el-select + .el-select{
       margin-left: 10px;
     }
     .el-input + .el-select{
       margin-left: 10px;
       width: 100%;
+    }
+    .el-select + .el-input{
+      margin-left: 10px;
     }
     .el-input + .el-input{
       margin-left: 10px;
