--- a/src/assets/style/common.scss
+++ b/src/assets/style/common.scss
@@ -143,3 +143,14 @@ a {
     }
   }
 }
+.formContainer{
+  max-width: 1000px;
+  .el-form{
+    display: flex;
+    flex-wrap: wrap;
+    .el-form-item{
+      width: 50%;
+      text-align: left;
+    }
+  }
+}
