--- a/src/icon/iconfont.css
+++ b/src/icon/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 3306750 */
-  src: url('iconfont.woff2?t=1649236992801') format('woff2'),
-       url('iconfont.woff?t=1649236992801') format('woff'),
-       url('iconfont.ttf?t=1649236992801') format('truetype');
+  src: url('iconfont.woff2?t=1649237794696') format('woff2'),
+       url('iconfont.woff?t=1649237794696') format('woff'),
+       url('iconfont.ttf?t=1649237794696') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-page_icon:before {
+  content: "\e673";
+}
+
+.icon-download:before {
+  content: "\e674";
+}
+
+.icon-Word:before {
+  content: "\e672";
 }
 
 .icon-basic2:before {
