--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -44,7 +44,7 @@
           }
           .password-icon {
             cursor: pointer;
-            color: #005bac;
+            color: #0050C8;
           }
           .byCode{
             // text-align: right;
