--- a/src/theme/index.scss
+++ b/src/theme/index.scss
@@ -1,11 +1,11 @@
 :root {
   // 主题色
-  --system-primary-color: #005bac; // 可做背景色和文本色，用做背景色时，需要和--system-primary-text-color配合使用，避免文件颜色和主题色冲突
+  --system-primary-color: #0050C8; // 可做背景色和文本色，用做背景色时，需要和--system-primary-text-color配合使用，避免文件颜色和主题色冲突
   --system-primary-text-color: #fff; // 主题色作为背景色时使用
   --system-primary-bg-color: #f5f5f5;
 
   // logo颜色相关
-  --system-logo-color: #005bac;
+  --system-logo-color: #0050C8;
   --system-logo-background: #fff;
 
   // 菜单颜色相关
