--- a/src/components/login/login.scss
+++ b/src/components/login/login.scss
@@ -67,6 +67,11 @@
           right: 10px;
         }
       }
+      .login-handle{
+        line-height: 30px;
+        display: flex;
+        justify-content: flex-end;
+      }
     }
   
   }
